--- a/src/app/pages/community/community-popover/community-popover.page.html
+++ b/src/app/pages/community/community-popover/community-popover.page.html
@@ -1,8 +1,8 @@
 <ion-content>
   <ion-list class="ion-no-padding">
-    <ion-item class="popover-item" class="ion-text-wrap" [hidden]="!joinChurchTag" (click)="joinCommunity()">Join Community<div tabindex="0"></div></ion-item>
-    <ion-item class="popover-item" class="ion-text-wrap" (click)="invite()">Invite Friend<div tabindex="0"></div></ion-item>
-    <ion-item class="popover-item" class="ion-text-wrap" [hidden]="!editChurchTag" (click)="editCommunity()">Edit Community<div tabindex="0"></div></ion-item>
-    <ion-item class="popover-item" class="ion-text-wrap" [hidden]="!leaveChurchTag" (click)="leaveCommunity()">Leave Community<div tabindex="0"></div></ion-item>
+    <ion-item class="popover-item" class="ion-text-wrap" [hidden]="!joinChurchTag" (click)="joinCommunity()">Join Community</ion-item>
+    <ion-item class="popover-item" class="ion-text-wrap" (click)="invite()">Invite Friend</ion-item>
+    <ion-item class="popover-item" class="ion-text-wrap" [hidden]="!editChurchTag" (click)="editCommunity()">Edit Community</ion-item>
+    <ion-item class="popover-item" class="ion-text-wrap" [hidden]="!leaveChurchTag" (click)="leaveCommunity()">Leave Community</ion-item>
   </ion-list>
 </ion-content>
