--- a/src/app/pages/community/listmycommunities/listmycommunities.page.html
+++ b/src/app/pages/community/listmycommunities/listmycommunities.page.html
@@ -29,6 +29,6 @@
         <p>{{community.industry.value}}</p>
         <p><ion-icon name="pin"></ion-icon>{{" "}}{{community.meeting_location.city}}<span [hidden]="!community.meeting_location.city||!community.meeting_location.state">{{", "}}</span>{{community.meeting_location.state}}<span [hidden]="!community.meeting_location.city&&!community.meeting_location.state">{{" "}}</span>{{community.meeting_location.country}}</p>
       </ion-label>
-    <div tabindex="0"></div></ion-item>
+    </ion-item>
   </ion-list>
 </ion-content>
