--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
@@ -141,7 +141,7 @@
             {{calendarItem.moment.matrix_string[0][0]}}
           </ion-label>
           <ion-badge color="button1" class="type-col ion-text-wrap" slot="end">{{calendarItem.moment.resource['en-US'].value[0]}}</ion-badge>
-        <div tabindex="0"></div></ion-item>
+        </ion-item>
       </ion-virtual-scroll>
     </ion-grid>
   </div>
@@ -150,11 +150,11 @@
       <ion-col>
         <ion-item lines="none">
           <div style="font-size: 14px" class="ion-text-wrap">Enter a Name for the {{selectedMoments[0].resource['en-US'].value[0]}}</div>
-        <div tabindex="0"></div></ion-item>
+        </ion-item>
         <ion-item lines="none">
           <ion-icon class="side-icon" color="grey" name="brush" slot="start"></ion-icon>
           <ion-textarea [(ngModel)]="selectedMoments[0].matrix_string[0][0]" rows="1" [minRows]="1" [maxRows]="2" autosize></ion-textarea>
-        <div tabindex="0"></div></ion-item>
+        </ion-item>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -214,11 +214,11 @@
       <ion-col>
         <ion-item lines="none">
           <div style="font-size: 14px" class="ion-text-wrap">When do you plan to start {{selectedMoments[0].matrix_string[0][0]}}?</div>
-        <div tabindex="0"></div></ion-item>
+        </ion-item>
         <ion-item lines="none">
           <ion-label (click)="focusCalendarDateField('start')" class="cursor-pointer" ><span [ngClass]="{ 'underline-datestring': dateType == 'start'}">{{recurrenceStartDate | datetime: 'w:l,m:s,y:n,d:n'}}</span><p style="color: red; font-style: italic;" *ngIf="dateType === 'start'"><ion-icon name="alert-circle"></ion-icon>Choose a Date Below</p></ion-label> <!--Start, Choose a date below-->
           <ion-datetime *ngIf="recurrenceStartTime" placeholder="12:00 pm" displayFormat="h:mm a" minuteValues="0,15,30,45" [(ngModel)]="recurrenceStartTime" [pickerOptions]="{cssClass: 'level-15'}"></ion-datetime>
-        <div tabindex="0"></div></ion-item>
+        </ion-item>
 
         <ion-card class="monthview" *ngIf="dateType">
           <div class="month-title-container">
@@ -256,7 +256,7 @@
     <ion-item lines="none" *ngIf="maxMomentCount === 1">
       <ion-label *ngIf="selectedMoments[0].cloned">This {{selectedMoments[0].resource['en-US'].value[0]}} template will be cloned:</ion-label>
       <ion-label *ngIf="!selectedMoments[0].cloned">You have selected this {{selectedMoments[0].resource['en-US'].value[0]}}:</ion-label>
-    <div tabindex="0"></div></ion-item>
+    </ion-item>
     <ion-grid class="selected-grid">
       <ion-row>
         <ion-col class="ion-align-self-center" *ngFor="let moment of selectedMoments; index as i" size="auto">
