--- a/src/app/pages/group/editgroup/editgroup.page.html
+++ b/src/app/pages/group/editgroup/editgroup.page.html
@@ -26,12 +26,12 @@
       <ion-item>
         <ion-label position="stacked">Group Name</ion-label>
         <ion-input type="text" formControlName="name"></ion-input>
-      <div tabindex="0"></div></ion-item>
+      </ion-item>
       <ion-item class="form-error-list" *ngIf="!groupForm.controls.name.pristine && !groupForm.controls.name.valid">
         <p class="form-error" slot="end" *ngIf="!groupForm.controls.name.pristine && groupForm.controls.name.hasError('required')">
           This is a required field.
         </p>
-      <div tabindex="0"></div></ion-item>
+      </ion-item>
       <div>
         <!--<ion-item-group>
           <ion-item>
@@ -39,113 +39,113 @@
             <ion-select [interfaceOptions]="{cssClass: 'level-15'}" #church formControlName="churchId" (ionChange)="changeCommunity(church.value)">
               <ion-select-option *ngFor="let church of churches" [value]="church._id" [class.selected]="church.selected">{{church.name}}</ion-select-option>
             </ion-select>
-          <div tabindex="0"></div></ion-item>
+          </ion-item>
           <ion-item class="form-error-list" *ngIf="!groupForm.controls.churchId.pristine && !groupForm.controls.churchId.valid">
             <p class="form-error" slot="end" *ngIf="!groupForm.controls.churchId.pristine && groupForm.controls.churchId.hasError('required')">
               This is a required field.
             </p>
-          <div tabindex="0"></div></ion-item>
+          </ion-item>
           <div *ngIf="groupForm.value.churchId !== ''">
             <ion-item>
               <ion-label>List in Discover Section? <ion-icon name="information-circle" (click)="explainDiscover()"></ion-icon></ion-label>
               <ion-toggle formControlName="public_group"></ion-toggle>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
           </div>
         </ion-item-group>-->
         <ion-item>
           <ion-label position="stacked">Description</ion-label>
           <ion-textarea autosize rows="3" [minRows]="3" [maxRows]="8" class="detailstextarea" type="text" formControlName="details"></ion-textarea>
-        <div tabindex="0"></div></ion-item>
+        </ion-item>
         <!--<ion-item-group lines="none">
           <ion-item lines="none" (click)="showOptional = !showOptional">
             <ion-label slot="start">Optional</ion-label>
             <ion-button size="small" slot="end" fill="outline" *ngIf="!showOptional">Show More</ion-button>
-          <div tabindex="0"></div></ion-item>
+          </ion-item>
           <div *ngIf="showOptional">
             <ion-item>
               <ion-label position="stacked">Start Time</ion-label>
               <ion-datetime (ionChange)="changeStartTime($event)" displayFormat="MMM DD, YYYY HH:mm" pickerFormat="Z MMM DD, YYYY HH:mm" min="2017" max="2050-12-31" formControlName="beginAt" [pickerOptions]="{cssClass: 'level-15'}"></ion-datetime>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item>
               <ion-label position="stacked">End Time</ion-label>
               <ion-datetime displayFormat="MMM DD, YYYY HH:mm" pickerFormat="Z MMM DD, YYYY HH:mm" min="2017" max="2050-12-31" formControlName="endAt" [pickerOptions]="{cssClass: 'level-15'}"></ion-datetime>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item>
               <ion-label position="stacked">Day of the Week</ion-label>
               <ion-select [interfaceOptions]="{cssClass: 'level-15'}" formControlName="meeting_day">
                 <ion-select-option *ngFor="let day of days" [value]="day.name" [class.selected]="day.selected">{{day.name}}</ion-select-option>
               </ion-select>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item>
               <ion-label position="stacked">Meeting Frequency</ion-label>
               <ion-select [interfaceOptions]="{cssClass: 'level-15'}" formControlName="meeting_frequency">
                 <ion-select-option *ngFor="let frequency of frequencies" [value]="frequency.name" [class.selected]="frequency.selected">{{frequency.name}}</ion-select-option>
               </ion-select>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item>
               <ion-label position="stacked">Location/Room</ion-label>
               <ion-input type="text" formControlName="location"></ion-input>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item>
               <ion-label position="stacked">Street</ion-label>
               <ion-input type="text" formControlName="street"></ion-input>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item>
               <ion-label position="stacked">City</ion-label>
               <ion-input type="text" formControlName="city"></ion-input>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item class="form-error-list" *ngIf="!groupForm.controls.city.pristine && !groupForm.controls.city.valid">
               <p class="form-error" slot="end" *ngIf="!groupForm.controls.city.pristine && groupForm.controls.city.hasError('required')">
                 This is a required field.
               </p>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item>
               <ion-label position="stacked">State</ion-label>
               <ion-input type="text" formControlName="state"></ion-input>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item class="form-error-list" *ngIf="!groupForm.controls.state.pristine && !groupForm.controls.state.valid">
               <p class="form-error" slot="end" *ngIf="!groupForm.controls.state.pristine && groupForm.controls.state.hasError('required')">
                 This is a required field.
               </p>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item>
               <ion-label position="stacked">Country</ion-label>
               <ion-select [interfaceOptions]="{cssClass: 'level-15'}" formControlName="country">
                 <ion-select-option *ngFor="let country of countries" [value]="country.name" [class.selected]="country.selected">{{country.name}}</ion-select-option>
               </ion-select>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item class="form-error-list" *ngIf="!groupForm.controls.country.pristine && !groupForm.controls.country.valid">
               <p class="form-error" slot="end" *ngIf="!groupForm.controls.country.pristine && groupForm.controls.country.hasError('required')">
                 This is a required field.
               </p>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
           </div>
         </ion-item-group>
         <ion-item-group *ngIf="showOptional">
           <ion-item class="ion-text-wrap" *ngIf="smsPlan">
             <ion-label slot="start">Communication Preference</ion-label>
             <p>You can control chat message delivery to the Email and SMS members.</p>
-          <div tabindex="0"></div></ion-item>
+          </ion-item>
           <ion-item class="ion-text-wrap" *ngIf="!smsPlan">
             <ion-label slot="start">Communication Preference</ion-label>
             <p>You can control chat message delivery to the Email members.</p>
-          <div tabindex="0"></div></ion-item>
+          </ion-item>
           <ion-item>
             <ion-label class="ion-text-wrap">Email members will receive messages</ion-label>
             <ion-toggle slot="end" formControlName="emailDisabled"></ion-toggle>
-          <div tabindex="0"></div></ion-item>
+          </ion-item>
           <div *ngIf="smsPlan">
             <ion-item>
               <ion-label class="ion-text-wrap">SMS members will receive messages</ion-label>
               <ion-toggle slot="end" formControlName="smsDisabled"></ion-toggle>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
             <ion-item-divider class="ion-text-wrap">
               <p>SMS keyword is a word of your choice for the text-to-join feature</p>
             </ion-item-divider>
             <ion-item lines="none">
               <ion-label position="stacked">SMS Keyword</ion-label>
               <ion-input type="text" formControlName="smsKeyword"></ion-input>
-            <div tabindex="0"></div></ion-item>
+            </ion-item>
           </div>
         </ion-item-group>-->
       </div>
