--- a/src/app/pages/manage/administrators/administrators.page.html
+++ b/src/app/pages/manage/administrators/administrators.page.html
@@ -16,6 +16,6 @@
         <img *ngIf="!admin.avatar" src="assets/img/avatar-default.jpg"/>
       </ion-avatar>
       {{admin.first_name}} {{admin.last_name}}
-    <div tabindex="0"></div></ion-item>
+    </ion-item>
   </ion-list>
 </ion-content>
