--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false" *ngIf="!userData.defaultProgram">
             <ion-item [routerLink]="['/app/discover']" mode="md">
-              <ion-icon slot="start" ios="people-sharp" md="people-sharp"></ion-icon>
+              <img slot="start" src="/assets/icon/discover.svg" alt="">
               <ion-label>Discover</ion-label>
             </ion-item>
           </ion-menu-toggle>
