--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -8,6 +8,23 @@
 </ion-header>
 
 <ion-content>
+  <ion-row>
+    <ion-col size="12">
+      <ion-label>Organization Snapshot</ion-label>
+    </ion-col>
+    <ion-col>
+      <h2>55</h2>
+      <ion-note>active members</ion-note>
+    </ion-col>
+    <ion-col>
+      <h2>55</h2>
+      <ion-note>small groups</ion-note>
+    </ion-col>
+    <ion-col>
+      <h2>55</h2>
+      <ion-note>1:1 relationships</ion-note>
+    </ion-col>
+  </ion-row>
   <ion-toolbar *ngIf="['owner','admin','staff'].includes(userData.user.role)">
     <ngx-charts-line-chart
             [scheme]="colorScheme"
